# hdf5-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
hdf5/: Cargo.toml  build.rs
hdf5-derive/: Cargo.toml
hdf5-derive/src/: lib.rs
hdf5-src/: Cargo.toml  build.rs
hdf5-sys/: Cargo.toml  README.md  build.rs
hdf5-sys/src/: h5d.rs  h5e.rs  h5f.rs  h5fd.rs  h5i.rs  h5p.rs  h5t.rs  h5vl.rs
hdf5-types/: Cargo.toml
hdf5-types/src/: array.rs  dyn_value.rs  h5type.rs  lib.rs  string.rs
hdf5/examples/: continuously_rw_1d.rs  swmr.rs
hdf5/src/: error.rs  globals.rs  lib.rs
hdf5/src/hl/: attribute.rs  container.rs  dataset.rs  datatype.rs  file.rs  filters.rs  group.rs  location.rs  plist.rs
hdf5/src/hl/filters/: zfp.rs
hdf5/src/hl/plist/: dataset_create.rs  object_copy.rs
hdf5/tests/: test_datatypes.rs  test_plist.rs
