[workspace]
resolver = "2"
members = ["hdf5", "hdf5-types", "hdf5-derive", "hdf5-sys", "hdf5-src"]
default-members = ["hdf5", "hdf5-types", "hdf5-derive", "hdf5-sys"]

[workspace.package]
rust-version = "1.80.0"
authors = [
    "Ivan Smirnov <aldanor@users.noreply.github.com>",
    "Magnus Ulimoen <mulimoen@users.noreply.github.com>",
]
keywords = ["hdf5"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/metno/hdf5-rust"
homepage = "https://github.com/metno/hdf5-rust"
edition = "2021"

[workspace.dependencies]
# external
cfg-if = "1.0"
half = { version = "2.2", default-features = false }
libc = "0.2"
libz-sys = { version = "1.1", default-features = false }
mpi-sys = "0.2"
num-complex = { version = "0.4", default-features = false }
regex = "1.10"

# internal
hdf5 = { package = "hdf5-metno", version = "0.12.0", path = "hdf5" }                      # !V
hdf5-derive = { package = "hdf5-metno-derive", version = "0.10.0", path = "hdf5-derive" } # !V
hdf5-types = { package = "hdf5-metno-types", version = "0.11.0", path = "hdf5-types" }   # !V
hdf5-src = { package = "hdf5-metno-src", version = "0.10.0", path = "hdf5-src" }          # !V
hdf5-sys = { package = "hdf5-metno-sys", version = "0.11.0", path = "hdf5-sys" }         # !V


[profile.dev]
# Fast compile, reasonable runtime
opt-level = 0          # no optimizations = much faster compilation
debug = 1              # keep minimal debug info (0 is smaller, 1 is a nice compromise)
incremental = true     # reuse previous compilation work
codegen-units = 16     # more parallel codegen units = faster compiles
lto = "off"            # no link-time optimization
panic = "unwind"       # default, keeps backtraces usable
overflow-checks = true # keep checks for safety in dev

[profile.test]
# Inherit dev as a baseline, then tweak for tests
inherits = "dev"
opt-level = 0          # keep tests compiling fast
debug = 1              # enough info for backtraces
overflow-checks = true
