[package]
name = "hdf5-metno-derive"
description = "Derive macro for HDF5 structs and enums."
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
version = "0.9.3"  # !V
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.2.0"
proc-macro-error2 = { version = "2.0", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive", "extra-traits"]}

[dev-dependencies]
trybuild = "1.0"
hdf5-metno = { path = "../hdf5" }
