[package]
name = "hdf5-metno-src"
license-file = "ext/hdf5/LICENSE"
build = "build.rs"
description = "Build script for compiling HDF5 C library from source."
links = "hdf5src"
readme = "README.md"
categories = ["development-tools::ffi"]
include = [
    "Cargo.toml",
    "build.rs",
    "README.md",
    "src/**/*.rs",
    "ext/hdf5/**/CMakeLists.txt",
    "ext/hdf5/LICENSE",
    "ext/hdf5/**/*.h",
    "ext/hdf5/**/*.c",
    "ext/hdf5/**/*.am",
    "ext/hdf5/**/*.cmake",
    "ext/hdf5/**/*.in",
    "ext/hdf5/config/*-warnings",
    "ext/hdf5/config/*flags",
    "ext/hdf5/config/apple",
    "ext/hdf5/config/cygwin",
    "ext/hdf5/config/freebsd",
    "ext/hdf5/config/ibm-aix",
    "ext/hdf5/config/linux-gnu",
    "ext/hdf5/config/netbsd",
    "ext/hdf5/config/solaris",
    "ext/hdf5/release_docs/USING_HDF5_CMake.txt",
    "ext/hdf5/release_docs/RELEASE.txt",
    "!ext/hdf5/bin/**",
    "!ext/hdf5/c++/**",
    "!ext/hdf5/examples/**",
    "!ext/hdf5/fortran/**",
    "!ext/hdf5/java/**",
    "!ext/hdf5/release_docs/**",
    "!ext/hdf5/test/**",
    "!ext/hdf5/testpar/**",
    "!ext/hdf5/tools/**",
    "!ext/hdf5/hl/test/**",
    "!ext/hdf5/hl/tools/**",
    "!ext/hdf5/hl/fortran/**",
    "!ext/hdf5/hl/c++/**",
    "!ext/hdf5/hl/examples/**",
    "!ext/hdf5/HDF5Examples/**",
    "!ext/hdf5/doxygen/**",
]
version = "0.10.0"  # !V
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
hl = []
zlib = ["dep:libz-sys"]
deprecated = []
threadsafe = []

[dependencies]
libz-sys = { workspace = true, optional = true, features = ["static", "libc"] }

[build-dependencies]
cmake = "0.1"
