[package]
name = "hdf5-metno"
readme = "../README.md"
description = "Thread-safe Rust bindings for the HDF5 library."
build = "build.rs"
categories = ["science", "filesystem"]
version = "0.12.1"  # !V
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
default = []
# Compile and statically link bundled HDF5 library.
static = ["hdf5-sys/static"]
# Enable zlib compression filter.
zlib = ["hdf5-sys/zlib"]
# Enable LZF compression filter.
lzf = ["dep:lzf-sys", "dep:errno"]
# Enable blosc compression filters.
blosc = ["dep:blosc-sys"]
# Enable blosc LZ4 compression filter.
blosc-lz4 = ["blosc", "blosc-sys/lz4"]
# Enable blosc zlib compression filter.
blosc-zlib = ["blosc", "blosc-sys/zlib"]
# Enable blosc zstd compression filter.
blosc-zstd = ["blosc", "blosc-sys/zstd"]
# Enable blosc snappy compression filter.
blosc-snappy = ["blosc", "blosc-sys/snappy"]
# Enable all blosc compression filters.
blosc-all = ["blosc", "blosc-lz4", "blosc-zlib", "blosc-zstd", "blosc-snappy"]
# Enable MPI support.
mpio = ["dep:mpi-sys", "hdf5-sys/mpio"]
# Enable complex number type support.
complex = ["hdf5-types/complex"]
# Enable float16 type support.
f16 = ["hdf5-types/f16"]
# Enable ZFP Support
zfp = ["dep:zfp-sys"]

# The features with version numbers such as 1.10.3, 1.12.0 are metafeatures
# and is only available when the HDF5 library is at least this version.
# Features have_direct and have_parallel are also metafeatures and dependent
# on the HDF5 library which is linked against.

[dependencies]
# external
bitflags = "2.4"
blosc-sys = { version = "0.3", package = "blosc-src", optional = true }
cfg-if = { workspace = true }
errno = { version = "0.3", optional = true }
libc = { workspace = true }
lzf-sys = { version = "0.1", optional = true }
mpi-sys = { workspace = true, optional = true }
ndarray = ">=0.15, <=0.17"
paste = "1.0"
zfp-sys = {version= "0.4.2", optional= true }
# internal
hdf5-derive = { workspace = true }
hdf5-sys = { workspace = true }
hdf5-types = { workspace = true }

[dev-dependencies]
half = { workspace = true }
num-complex = { workspace = true }
parking_lot = "0.12.3"
paste = "1.0"
pretty_assertions = "1.4"
rand = { version = "0.9", features = ["small_rng"] }
regex = { workspace = true }
scopeguard = "1.2"
tempfile = "3.9"

[package.metadata.docs.rs]
features = ["static", "zlib", "blosc", "lzf", "f16", "complex","zfp"]
